--- a/tab.html
+++ b/tab.html
@@ -24,11 +24,9 @@
       </select>
       <button type="submit">Send</button>
     </form>
-
-    <!-- JavaScript -->
     <script>
       function convertFormToJSON(form) {
-        const array = $(form).serializeArray(); // Encodes the set of form elements as an array of names and values.
+        const array = $(form).serializeArray();
         const json = {};
         $.each(array, function () {
           json[this.name] = this.value || "";
